use-cases/policy/authz-policy-safe.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-health-endpoint
  namespace: asm-showcase
spec:
  action: ALLOW
  rules:
    - to:
      - operation:
          paths:
            - "/health"
            - "/ready"
